// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tsLibGenerator .eslintrc.json matches snapshot 1`] = `
Object {
  "extends": Array [
    "../../.eslintrc.json",
  ],
  "ignorePatterns": Array [
    "node_modules",
  ],
  "overrides": Array [
    Object {
      "files": Array [
        "jest.config.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "parserOptions": Object {
        "project": Array [
          "packages/ts-lib/tsconfig.spec.json",
        ],
      },
    },
    Object {
      "excludedFiles": Array [
        "jest.config.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "files": Array [
        "*.ts",
      ],
      "parserOptions": Object {
        "project": Array [
          "packages/ts-lib/tsconfig.lib.json",
        ],
      },
    },
  ],
}
`;

exports[`tsLibGenerator E2E project .eslintrc.json matches snapshot 1`] = `
Object {
  "extends": Array [
    "../../.eslintrc.json",
  ],
  "ignorePatterns": Array [
    "node_modules",
  ],
  "overrides": Array [
    Object {
      "files": Array [
        "jest.config.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "parserOptions": Object {
        "project": Array [
          "e2e/ts-lib-e2e/tsconfig.spec.json",
        ],
      },
    },
    Object {
      "excludedFiles": Array [
        "jest.config.ts",
        "*.spec.ts",
        "*.test.ts",
      ],
      "files": Array [
        "*.ts",
      ],
      "parserOptions": Object {
        "project": Array [
          "e2e/ts-lib-e2e/tsconfig.lib.json",
        ],
      },
    },
  ],
}
`;

exports[`tsLibGenerator E2E project jest.config.ts matches snapshot 1`] = `
"export default {
  displayName: \\"ts-lib-e2e\\",
  preset: \\"../../jest.preset.js\\",
    globals: {
    \\"ts-jest\\": {
      tsconfig: \\"<rootDir>/tsconfig.spec.json\\",
    },
  },
      testEnvironment: \\"node\\",
    transform: {
        \\"^.+\\\\\\\\.[tj]s$\\": \\"ts-jest\\",
      },
    moduleFileExtensions: [\\"ts\\", \\"js\\", \\"html\\", \\"json\\"],
    coverageDirectory: \\"../../reports/coverage/packages/ts-lib-e2e\\",
  reporters: [
    \\"default\\",
    [
      \\"jest-junit\\",
      {
        addFileAttribute: \\"true\\",
        classNameTemplate: \\"{suitename}\\",
        outputDirectory: \\"reports/junit\\",
        outputName: \\"ts-lib-e2e.xml\\",
      },
    ],
  ],
};
"
`;

exports[`tsLibGenerator E2E project project.json matches snapshot 1`] = `
Object {
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "implicitDependencies": Array [
    "ts-lib",
  ],
  "name": "ts-lib-e2e",
  "projectType": "application",
  "sourceRoot": "e2e/ts-lib-e2e/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "configurations": Object {
        "production": Object {
          "extractLicenses": true,
          "fileReplacements": Array [
            Object {
              "replace": "e2e/ts-lib-e2e/src/environments/environment.ts",
              "with": "e2e/ts-lib-e2e/src/environments/environment.prod.ts",
            },
          ],
          "inspect": false,
          "optimization": true,
        },
      },
      "executor": "@nrwl/webpack:webpack",
      "options": Object {
        "assets": Array [
          "e2e/ts-lib-e2e/src/assets",
        ],
        "compiler": "tsc",
        "main": "e2e/ts-lib-e2e/src/main.ts",
        "outputPath": "dist/e2e/ts-lib-e2e",
        "target": "node",
        "tsConfig": "e2e/ts-lib-e2e/tsconfig.app.json",
      },
      "outputs": Array [
        "{options.outputPath}",
      ],
    },
    "e2e": Object {
      "dependsOn": Array [
        Object {
          "projects": "self",
          "target": "install",
        },
      ],
      "executor": "@nrwl/jest:jest",
      "options": Object {
        "jestConfig": "e2e/ts-lib-e2e/jest.config.ts",
        "passWithNoTests": true,
      },
      "outputs": Array [
        "reports/coverage/e2e/ts-lib-e2e",
        "reports/junit/ts-lib-e2e.xml",
      ],
    },
    "install": Object {
      "dependsOn": Array [
        Object {
          "projects": "dependencies",
          "target": "build",
        },
      ],
      "executor": "nx:run-commands",
      "options": Object {
        "commands": Array [
          "yarn cache clean --all",
          "yarn install",
        ],
        "cwd": "e2e/ts-lib-e2e",
        "parallel": false,
      },
    },
    "lint": Object {
      "executor": "@nrwl/linter:eslint",
      "options": Object {
        "lintFilePatterns": Array [
          "e2e/ts-lib-e2e",
        ],
      },
      "outputs": Array [
        "{options.outputFile}",
      ],
    },
  },
}
`;

exports[`tsLibGenerator E2E project tsconfig.app.json or tsconfig.lib.json matches snapshot 1`] = `
Object {
  "compilerOptions": Object {
    "declaration": true,
    "types": Array [
      "node",
    ],
  },
  "exclude": Array [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "test",
  ],
  "extends": "./tsconfig.json",
  "include": Array [
    "**/*.ts",
  ],
}
`;

exports[`tsLibGenerator E2E project tsconfig.json matches snapshot 1`] = `
Object {
  "compilerOptions": Object {
    "lib": Array [
      "es2022",
    ],
    "module": "commonjs",
    "outDir": "../../dist/out-tsc",
    "target": "es2022",
  },
  "extends": "../../tsconfig.base.json",
  "files": Array [],
  "include": Array [],
  "references": Array [
    Object {
      "path": "./tsconfig.lib.json",
    },
    Object {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`tsLibGenerator E2E project tsconfig.spec.json matches snapshot 1`] = `
Object {
  "compilerOptions": Object {
    "types": Array [
      "jest",
      "node",
    ],
  },
  "extends": "./tsconfig.json",
  "include": Array [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "**/*.d.ts",
    "test",
  ],
}
`;

exports[`tsLibGenerator jest.config.ts matches snapshot 1`] = `
"export default {
  displayName: \\"ts-lib\\",
  preset: \\"../../jest.preset.js\\",
    globals: {
    \\"ts-jest\\": {
      tsconfig: \\"<rootDir>/tsconfig.spec.json\\",
    },
  },
      testEnvironment: \\"node\\",
    transform: {
        \\"^.+\\\\\\\\.[tj]s$\\": \\"ts-jest\\",
      },
    moduleFileExtensions: [\\"ts\\", \\"js\\", \\"html\\", \\"json\\"],
    coverageDirectory: \\"../../reports/coverage/packages/ts-lib\\",
  reporters: [
    \\"default\\",
    [
      \\"jest-junit\\",
      {
        addFileAttribute: \\"true\\",
        classNameTemplate: \\"{suitename}\\",
        outputDirectory: \\"reports/junit\\",
        outputName: \\"ts-lib.xml\\",
      },
    ],
  ],
};
"
`;

exports[`tsLibGenerator project.json matches snapshot 1`] = `
Object {
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "ts-lib",
  "projectType": "library",
  "sourceRoot": "packages/ts-lib/src",
  "tags": Array [],
  "targets": Object {
    "build": Object {
      "executor": "@nrwl/js:tsc",
      "options": Object {
        "assets": Array [
          "packages/ts-lib/*.md",
        ],
        "main": "packages/ts-lib/src/index.ts",
        "outputPath": "dist/packages/ts-lib",
        "tsConfig": "packages/ts-lib/tsconfig.lib.json",
      },
      "outputs": Array [
        "{options.outputPath}",
      ],
    },
    "deploy": Object {
      "configurations": Object {
        "development": Object {
          "dryRun": true,
        },
        "production": Object {
          "dryRun": false,
        },
      },
      "defaultConfiguration": "development",
      "dependsOn": Array [
        Object {
          "projects": "self",
          "target": "build",
        },
      ],
      "executor": "@chiubaka/nx-plugin:npm-publish",
      "options": Object {
        "packagePath": "dist/packages/ts-lib",
      },
    },
    "lint": Object {
      "executor": "@nrwl/linter:eslint",
      "options": Object {
        "lintFilePatterns": Array [
          "packages/ts-lib",
        ],
      },
      "outputs": Array [
        "{options.outputFile}",
      ],
    },
    "publish": Object {
      "dependsOn": Array [
        Object {
          "projects": "self",
          "target": "build",
        },
      ],
      "executor": "@nrwl/workspace:run-commands",
      "options": Object {
        "command": "node tools/scripts/publish.mjs ts-lib {args.ver} {args.tag}",
      },
    },
    "test": Object {
      "executor": "@nrwl/jest:jest",
      "options": Object {
        "jestConfig": "packages/ts-lib/jest.config.ts",
        "passWithNoTests": true,
      },
      "outputs": Array [
        "reports/coverage/packages/ts-lib",
        "reports/junit/ts-lib.xml",
      ],
    },
  },
}
`;

exports[`tsLibGenerator tsconfig.app.json or tsconfig.lib.json matches snapshot 1`] = `
Object {
  "compilerOptions": Object {
    "declaration": true,
  },
  "exclude": Array [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "test",
  ],
  "extends": "./tsconfig.json",
  "include": Array [
    "**/*.ts",
  ],
}
`;

exports[`tsLibGenerator tsconfig.json matches snapshot 1`] = `
Object {
  "compilerOptions": Object {
    "lib": Array [
      "es2015",
    ],
    "module": "commonjs",
    "outDir": "../../dist/out-tsc",
    "target": "es2015",
  },
  "extends": "../../tsconfig.base.json",
  "files": Array [],
  "include": Array [],
  "references": Array [
    Object {
      "path": "./tsconfig.lib.json",
    },
    Object {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`tsLibGenerator tsconfig.spec.json matches snapshot 1`] = `
Object {
  "compilerOptions": Object {
    "types": Array [
      "jest",
      "node",
    ],
  },
  "extends": "./tsconfig.json",
  "include": Array [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "**/*.d.ts",
    "test",
  ],
}
`;
